--- a/src/sass/patternfly-additions.scss
+++ b/src/sass/patternfly-additions.scss
@@ -1,23 +1,21 @@
 /* PatternFly additions to Bootstrap */
 
-// Variable overrides
+// Patternfly variables and bootstrap overrides
 @import 'variables';
 
 // Bootstrap variables and mixins
 @import 'bootstrap-sass/assets/stylesheets/bootstrap/variables';
 @import 'bootstrap-sass/assets/stylesheets/bootstrap/mixins';
-
 // Font Awesome variables
 @import 'font-awesome/scss/variables';
-
 // Bootstrap-Combobox
-@import 'dependencies/patternfly-bootstrap-combobox/combobox';
+@import 'bootstrap-combobox/combobox';
 // Bootstrap-Datepicker
-@import 'dependencies/bootstrap-datepicker/datepicker3';
+@import 'bootstrap-datepicker/datepicker3';
 // Bootstrap-Select
 @import 'bootstrap-select/sass/bootstrap-select';
 // Bootstrap Switch
-@import 'dependencies/bootstrap-switch/bootstrap-switch';
+@import 'bootstrap-switch/bootstrap-switch';
 // Bootstrap Touchspin
 @import "bootstrap-touchspin/dist/jquery.bootstrap-touchspin";
 // C3 charts
