--- a/src/sass/patternfly.scss
+++ b/src/sass/patternfly.scss
@@ -1,30 +1,30 @@
 /* PatternFly */
 
+// Patternfly variables and bootstrap overrides
+@import 'partials/variables';
+// OpenSans
+@import 'partials/fonts';
 // Bootstrap
 @import 'bootstrap-sass/assets/stylesheets/bootstrap';
-// Bootstrap overrides
-@import 'variables';
-// OpenSans
-@import 'fonts';
 // Font Awesome
 @import 'font-awesome/scss/font-awesome';
 
-@import 'mixins';
-@import 'alerts';
-@import 'badges';
-@import 'breadcrumbs';
-@import 'buttons';
-@import 'dropdowns';
-@import 'forms';
-@import 'labels';
-@import 'list-group';
-@import 'modals';
-@import 'pager';
-@import 'pagination';
-@import 'panels';
-@import 'popovers';
-@import 'progress-bars';
-@import 'tables';
-@import 'tabs';
-@import 'tooltip';
-@import 'type';
+@import 'partials/mixins';
+@import 'partials/alerts';
+@import 'partials/badges';
+@import 'partials/breadcrumbs';
+@import 'partials/buttons';
+@import 'partials/dropdowns';
+@import 'partials/forms';
+@import 'partials/labels';
+@import 'partials/list-group';
+@import 'partials/modals';
+@import 'partials/pager';
+@import 'partials/pagination';
+@import 'partials/panels';
+@import 'partials/popovers';
+@import 'partials/progress-bars';
+@import 'partials/tables';
+@import 'partials/tabs';
+@import 'partials/tooltip';
+@import 'partials/type';
