chore(styles): Create new file structure for sass conversion.
Converted sass files now go into src/sass/converted. Static files are at src/sass/static.

--- a/src/sass/static/patternfly-additions.scss
+++ b/src/sass/static/patternfly-additions.scss
@@ -24,7 +24,7 @@
 
 @import 'partials/mixins';
 @import 'partials/about-modal';
-// @import 'partials/application-launcher';
+@import 'partials/application-launcher';
 @import 'partials/blank-slate';
 @import 'partials/bootstrap-combobox';
 // @import 'partials/bootstrap-datepicker';
