--- a/src/less/notifications-drawer.less
+++ b/src/less/notifications-drawer.less
@@ -233,11 +233,12 @@
 /* Exclusive styles to work with Horizontal Navigation */
 .navbar-pf {
   .drawer-pf {
-    height: calc(~"100vh - 46px");
+
+    height: ~"calc(100vh - 46px)";
     top: 26px;
     @media (max-width: @screen-xs-max) {
       width:100%;
-      height: calc(~"100vh - 58px");
+      height: ~"calc(100vh - 58px)";
       top:34px;
     }
   }
