--- a/src/less/bootstrap-datepicker.less
+++ b/src/less/bootstrap-datepicker.less
@@ -7,7 +7,7 @@
   border-color: @input-border !important;
   color: @input-color;
   .box-shadow(inset 0 1px 1px fade(@color-pf-black, 7.5%));
-  .form-control-focus();
+  .form-control-outline();
   &:focus {
     border-color: @input-border-focus !important;
     .has-error & {
