--- a/src/less/mixins.less
+++ b/src/less/mixins.less
@@ -82,8 +82,8 @@
 }
 
 // SASS CONVERSION FIX.
-// Allows inclusion of sr-only rules in nested media queries (@extends .sr-only
-// will not work).
+// Allows inclusion of sr-only rules in nested media queries where @extends .sr-only
+// will not work.
 .sr-only-pf() {
   position: absolute;
   width: 1px;
@@ -93,21 +93,6 @@
   overflow: hidden;
   clip: rect(0, 0, 0, 0);
   border: 0;
-}
-
-// SASS CONVERSION FIX.
-// Fixes bootstrap-sass issue 1139 "form-control-focus mixin error"
-// https://github.com/twbs/bootstrap-sass/issues/1139
-// This is the *exact* same mixin that is defined in the bootstrap less.
-// Redefining it here allows our converted _mixins.scss file to override the
-// bootstrap-sass mixin which is broken.
-.form-control-focus(@color: @input-border-focus) {
-  @color-rgba: rgba(red(@color), green(@color), blue(@color), .6);
-  &:focus {
-    border-color: @color;
-    outline: 0;
-    .box-shadow(~"inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px @{color-rgba}");
-  }
 }
 
 // PatternFly-specific
