chore(styles): Change screen-reader-only mixin reference to sr-only-pf in src/partial-overrides/_app

--- a/src/sass/partial-overrides/_application-launcher.scss
+++ b/src/sass/partial-overrides/_application-launcher.scss
@@ -7,7 +7,7 @@
   overflow: visible;
 
   .applauncher-pf-title {
-    @include screen-reader-only;
+    @include sr-only-pf();
   }
 
   .dropdown-toggle {
