chore(styles): Change button-variant mixin to button-gradient in src/less/mixins.less

--- a/src/less/experimental-features.less
+++ b/src/less/experimental-features.less
@@ -44,5 +44,5 @@
 }
 
 .btn-experimental-pf {
-  .button-variant(@btn-default-color; @color-pf-light-green-400; @color-pf-light-green-300; @color-pf-light-green-400; @color-pf-light-green-400);
+  .button-gradient(@btn-default-color; @color-pf-light-green-400; @color-pf-light-green-300; @color-pf-light-green-400; @color-pf-light-green-400);
 }
