--- a/src/less/pager.less
+++ b/src/less/pager.less
@@ -6,7 +6,7 @@
   li {
     > a,
     > span {
-      .button-variant(@btn-default-color; @btn-default-bg; @btn-default-bg-img-start; @btn-default-bg-img-stop; @btn-default-border);
+      .button-gradient(@btn-default-color; @btn-default-bg; @btn-default-bg-img-start; @btn-default-bg-img-stop; @btn-default-border);
       color: @gray-pf;
       font-weight: 600;
       line-height: 22px;
