--- a/src/less/bootstrap-combobox.less
+++ b/src/less/bootstrap-combobox.less
@@ -26,7 +26,7 @@
     }
   }
   .input-group-addon {
-    .button-variant(@btn-default-color; @btn-default-bg; @btn-default-bg-img-start; @btn-default-bg-img-stop; @btn-default-border);
+    .button-gradient(@btn-default-color; @btn-default-bg; @btn-default-bg-img-start; @btn-default-bg-img-stop; @btn-default-border);
     position: relative; // IE8
     &:active {
       .box-shadow(inset 0 2px 8px fade(@color-pf-black, 20%));
