--- a/src/sass/patternfly-additions.scss
+++ b/src/sass/patternfly-additions.scss
@@ -1,12 +1,16 @@
 /* PatternFly additions to Bootstrap */
 
-// Patternfly variables and bootstrap overrides
-@import 'partials/variables';
 // Bootstrap variables and mixins
 @import 'bootstrap-sass/assets/stylesheets/bootstrap/variables';
 @import 'bootstrap-sass/assets/stylesheets/bootstrap/mixins';
+
+// patternfly variables
+@import 'partials/variables';
+
 // Font Awesome variables
 @import 'font-awesome/scss/variables';
+
+
 // Bootstrap-Combobox
 @import 'bootstrap-combobox/combobox';
 // Bootstrap-Datepicker
