--- a/src/less/mixins.less
+++ b/src/less/mixins.less
@@ -6,7 +6,49 @@
 // Bootstrap overrides
 // -------------------
 
-// Button variants
+
+// Override bootstrap button variant mixin
+.button-variant(@color; @background; @border) {
+  background-color: @background;
+  border-color: @border;
+  color: @color;
+
+  &:hover,
+  &:focus,
+  &:active,
+  &.active,
+  .open .dropdown-toggle& {
+    background-color: @background;
+    background-image: none;
+    border-color: @border;
+    color: @color;
+  }
+  &:active,
+  &.active,
+  .open .dropdown-toggle& {
+    background-image: none;
+    &:hover,
+    &:focus,
+    &.focus {
+      background-color: darken(@background, 5%);
+          border-color: darken(@border, 7%);
+    }
+  }
+  &.disabled,
+  &[disabled],
+  fieldset[disabled] & {
+    &,
+    &:hover,
+    &:focus,
+    &:active,
+    &.active {
+      background-color: @background;
+      border-color: @border;
+    }
+  }
+}
+
+// Creates a button with a gradient background
 .button-gradient(@color; @background; @background-image-start; @background-image-stop; @border) {
   .button-variant(@color; @background; @border);
   #gradient > .vertical(@background-image-start, @background-image-stop);
