--- a/src/sass/patternfly.scss
+++ b/src/sass/patternfly.scss
@@ -1,18 +1,23 @@
 /* PatternFly */
 
-// Patternfly variables and mixins
+// Patternfly variables
 @import 'partials/variables';
+
 // Bootstrap Core variables and mixins
 @import "bootstrap-sass/assets/stylesheets/bootstrap/variables";
 @import "bootstrap-sass/assets/stylesheets/bootstrap/mixins";
-// Patternfly Bootstrap mixin overrides
-@import 'partials/bootstrap-mixin-overrides';
+
+// Patternfly mixins
+@import 'partials/mixins';
+
 // OpenSans
 @import 'partials/fonts';
+
 // Bootstrap Reset and dependencies
 @import "bootstrap-sass/assets/stylesheets/bootstrap/normalize";
 @import "bootstrap-sass/assets/stylesheets/bootstrap/print";
 @import "bootstrap-sass/assets/stylesheets/bootstrap/glyphicons";
+
 // Bootstrap Core CSS
 @import "bootstrap-sass/assets/stylesheets/bootstrap/scaffolding";
 @import "bootstrap-sass/assets/stylesheets/bootstrap/type";
@@ -21,6 +26,7 @@
 @import "bootstrap-sass/assets/stylesheets/bootstrap/tables";
 @import "bootstrap-sass/assets/stylesheets/bootstrap/forms";
 @import "bootstrap-sass/assets/stylesheets/bootstrap/buttons";
+
 // Bootstrap Components
 @import "bootstrap-sass/assets/stylesheets/bootstrap/component-animations";
 @import "bootstrap-sass/assets/stylesheets/bootstrap/dropdowns";
@@ -43,18 +49,20 @@
 @import "bootstrap-sass/assets/stylesheets/bootstrap/responsive-embed";
 @import "bootstrap-sass/assets/stylesheets/bootstrap/wells";
 @import "bootstrap-sass/assets/stylesheets/bootstrap/close";
+
 // Bootstrap Components w/ JavaScript
 @import "bootstrap-sass/assets/stylesheets/bootstrap/modals";
 @import "bootstrap-sass/assets/stylesheets/bootstrap/tooltip";
 @import "bootstrap-sass/assets/stylesheets/bootstrap/popovers";
 @import "bootstrap-sass/assets/stylesheets/bootstrap/carousel";
+
 // Bootstrap Utility classes
 @import "bootstrap-sass/assets/stylesheets/bootstrap/utilities";
 @import "bootstrap-sass/assets/stylesheets/bootstrap/responsive-utilities";
+
 // Font Awesome
 @import 'font-awesome/scss/font-awesome';
 
-@import 'partials/mixins';
 @import "partials/alerts";
 @import "partials/badges";
 @import "partials/breadcrumbs";
