--- a/src/less/notifications-drawer.less
+++ b/src/less/notifications-drawer.less
@@ -101,7 +101,7 @@
 .drawer-pf-action {
   display: flex;
   border-bottom: 1px solid @card-pf-border-color;
-  
+
   .btn-link {
     color: @link-color;
     padding: 10px 0;
@@ -214,12 +214,12 @@
 /* Exclusive styles to work with Vertical Navigation */
 .navbar-pf-vertical {
   .drawer-pf {
-    height: calc(~"100vh - 80px");//to create a 20px offset bottom
+    height: ~"calc(100vh - 80px)";//to create a 20px offset bottom
     top: 58px; //menu height;
 
       @media (max-width: @screen-xs-max) {
         width:100%;
-        height: calc(~"100vh - 58px");
+        height: ~"calc(100vh - 58px)";
       }
 
   }
