chore(styles): Revert patternfly button-variant mixin name change

--- a/src/less/buttons.less
+++ b/src/less/buttons.less
@@ -26,11 +26,11 @@
 }
 
 .btn-danger {
-  .button-gradient(@btn-danger-color; @btn-danger-bg; @btn-danger-bg-img-start; @btn-danger-bg-img-stop; @btn-danger-border);
+  .button-variant(@btn-danger-color; @btn-danger-bg; @btn-danger-bg-img-start; @btn-danger-bg-img-stop; @btn-danger-border);
 }
 
 .btn-default {
-  .button-gradient(@btn-default-color; @btn-default-bg; @btn-default-bg-img-start; @btn-default-bg-img-stop; @btn-default-border);
+  .button-variant(@btn-default-color; @btn-default-bg; @btn-default-bg-img-start; @btn-default-bg-img-stop; @btn-default-border);
 }
 
 .btn-link {
@@ -41,7 +41,7 @@
 }
 
 .btn-primary {
-  .button-gradient(@btn-primary-color; @btn-primary-bg; @btn-primary-bg-img-start; @btn-primary-bg-img-stop; @btn-primary-border);
+  .button-variant(@btn-primary-color; @btn-primary-bg; @btn-primary-bg-img-start; @btn-primary-bg-img-stop; @btn-primary-border);
 }
 
 .btn-xs,
