--- a/src/less/pagination.less
+++ b/src/less/pagination.less
@@ -6,7 +6,7 @@
   > li {
     > a,
     > span {
-      .button-gradient(@btn-default-color; @btn-default-bg; @btn-default-bg-img-start; @btn-default-bg-img-stop; @btn-default-border);
+      .button-variant(@btn-default-color; @btn-default-bg; @btn-default-bg-img-start; @btn-default-bg-img-stop; @btn-default-border);
       cursor: default;
       font-weight: 600;
       padding: @padding-base-vertical @padding-large-horizontal;
